# architecture-as-code

./: .gitignore  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml  requirements-dev.txt
docs/: AZURE-APPROACH.md  BUSINESS-MODEL-CANVAS.md  DISCUSSION-INTEGRATION.md  MVP-ARCHITECTURE-FOCUSED.md  PUBLISHING-STRATEGY.md  ROADMAP.md
docs/archive/: ARCHITECTURE-LIFECYCLE-TOOL.md  MVP-FOCUSED-security.md  MVP-comprehensive.md  README.md  VISION-OLD.md  VISION-platform.md
src/arch_as_code/: __init__.py  cli.py
src/arch_as_code/api/v1/: __init__.py  discovery.py
src/arch_as_code/discovery/: __init__.py
src/arch_as_code/models/: __init__.py  application.py  resource.py
tests/api/: test_discovery.py
tests/integration/: test_azure_discovery.py
tests/smoke/: test_edge_cases.py
